merubah halaman index

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <div class="container">
 <!-- role="form" -->
       <form class="form-signin" method="post" action="proseslogin.php">
-        <h2 class="form-signin-heading"><center><span class="glyphicon glyphicon-th-large"></span> Welcome Admin</center></h2>
-        <h5 class="baru">Login To Admin DistroIT</h5>
+        <h2 class="form-signin-heading"><center><span class="glyphicon glyphicon-th-large"></span> Selamat Datang </center></h2>
+        <h5 class="baru">Login</h5>
         <input name="user" id="user" type="input" class="form-control" placeholder="Username" required autofocus>
         <input name="pass" id="pass" type="password" class="form-control" placeholder="Password" required>
         <label class="checkbox">
