--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       dan masih dikembangkan oleh Hakko Bio Richard yang dapat di hubungi di 
       <table>
       <tr>
-      <td>No Telepon</td> <td>:</td> <td>0856 949 848 03</td>
+      <td>No Telepon</td> <td>:</td> <td>081389516493</td>
       </tr>
       <br />
       <tr>
